--- a/refrath-gegen.html
+++ b/refrath-gegen.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/png" href="favicon.png">
 <script src="refrath-gegen.js"></script>
 <body>
-<form id="config"><input type="text" id="input_home" value="REFRATH" /> gegen <input type="text" id="input_away" value="DÜREN" autofocus="autofocus" /><button id="set" role="submit">Setzen</button></form>
+<form id="config"><input type="text" id="input_home" value="REFRATH" /> gegen <input type="text" id="input_away" value="NEUHAUSEN-NYMPHENBURG" autofocus="autofocus" /><button id="set" role="submit">Setzen</button></form>
 
 <div id="content">
 <div id="home"><span></span></div>
